WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302776
Size in bytes to clobber is not aligned on 32 bit OMGIRGenerator's prepareForTailCallImpl
https://bugs.webkit.org/show_bug.cgi?id=302776
Summary
Size in bytes to clobber is not aligned on 32 bit OMGIRGenerator's prepareFor...
Ioanna M. Dimitriou H.
Reported
2025-11-19 04:57:26 PST
On 32 bit systems registerSize() is 8, which causes the assertion in OMGIRGenerator::prepareForTailCallImpl to fail because the stackBytesToClobber are then not aligned on the stack.
Attachments
Add attachment
proposed patch, testcase, etc.
Ioanna M. Dimitriou H.
Comment 1
2025-11-19 04:59:45 PST
Pull request:
https://github.com/WebKit/WebKit/pull/54173
EWS
Comment 2
2025-11-25 02:57:42 PST
Committed
303530@main
(9f179c4476dd): <
https://commits.webkit.org/303530@main
> Reviewed commits have been landed. Closing PR #54173 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-25 02:58:15 PST
<
rdar://problem/165391700
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug