Size in bytes to clobber is not aligned on 32 bit OMGIRGenerator's prepareForTailCallImpl https://bugs.webkit.org/show_bug.cgi?id=302776

Reviewed by Justin Michaud.

This bug causes a build failure on 32 bit systems.

Define the stackSlotsToClobber as a multiple of stackAlignmentBytes() to ensure that the stackBytesToClobber are always aligned on the stack.

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::prepareForTailCallImpl):

Canonical link: https://commits.webkit.org/303530@main